# cloudpack

./: CONTRIBUTING.md  README.md  cloudpack.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
cloudpack/: __main__.py  cli.py  vault.py
cloudpack/providers/: google_drive.py
scripts/: update_deps.sh
tests/: test_cli.py  test_lock_unlock.py
